# advanced-process-discovery-interface

./: README.md  docker-compose.yml  start.bat  start.sh
activity-relationship-matrix-discovery/api-server/src/: main.rs
activity-relationship-matrix-discovery/core/: Cargo.toml
activity-relationship-matrix-discovery/core/src/: error.rs  lib.rs  logic.rs
apd-integration/: Dockerfile  package-lock.json  package.json
apd-integration/.history/apps/: package_20250617122101.json
apd-integration/apps/apd-ui/: .gitignore  package.json  tail.ts
apd-integration/apps/apd-ui/public/: diagram.bpmn
apd-integration/apps/bpmn-condec-modeler/: package.json
apd-ui/: package-lock.json  package.json  vite.config.ts
apd-ui/src/: main.tsx
apd-ui/src/components/: MatrixTable.tsx  ModelStepSelector.tsx
apd-ui/src/hooks/: useProjectStore.tsx
apd-ui/src/router/: router.tsx
apd-ui/src/services/: classification-api.ts
apd-ui/src/types/: project-types.ts
apd-ui/src/views/: Documentation.tsx  Project.tsx  test.tsx
automated-process-classification/: Cargo.toml  Dockerfile
automated-process-classification/api-server/: Cargo.toml
automated-process-classification/api-server/src/: main.rs
automated-process-classification/core/: Cargo.toml
automated-process-classification/core/src/: classification.rs  error.rs  lib.rs  logic.rs
event-log-to-declare-json/: Cargo.toml  Dockerfile
event-log-to-declare-json/api-server/src/: main.rs
event-log-to-declare-json/core/: Cargo.toml
event-log-to-declare-json/core/src/: declare_translation.rs  error.rs  lib.rs  logic.rs
(+197 files in other folders)
