[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
mime = "0.3"
tokio-util = "0.7"
bytes = "1"
core = { path = "../core" }